--- a/packages/spindle-ui/src/Modal/AppealModal.stories.mdx
+++ b/packages/spindle-ui/src/Modal/AppealModal.stories.mdx
@@ -127,6 +127,56 @@ function AppealModalExample() {
   </Story>
 </Preview>
 
+<Source
+  code={`
+<AppealModal.StyleOnly
+  aria-describedby="styleonly-description"
+  aria-labelledby="styleonly-title"
+>
+  <AppealModal.Image>
+    <img
+      style={{ height: 'auto', width: '100%' }}
+      width="640"
+      height="336"
+      src="https://images.microcms-assets.io/assets/24995dc41d5c40808fe4a9e3f6fb2b20/e2526e7bfa494168a2e547cfe55ac89f/top_mv.jpg?w=640&h=336&fit=crop&fm=webp&q=85"
+    />
+  </AppealModal.Image>
+  <AppealModal.Title id="styleonly-title">About Ameba</AppealModal.Title>
+  <AppealModal.Body id="styleonly-description">
+    AmebaはAmebaブログをはじめ、最新の芸能人ニュースやマンガ・占いなど生きたコンテンツが集結した月間7,500万人が利用する国民的メディアサービスです。
+  </AppealModal.Body>
+  <AppealModal.ButtonGroup>
+    <LinkButton
+      href="https://about.ameba.jp/"
+      layout="fullWidth"
+      size="medium"
+    >
+      サイトを見る
+    </LinkButton>
+  </AppealModal.ButtonGroup>
+</AppealModal.StyleOnly>
+  `}
+/>
+
+<Source
+  code={`
+<div class="spui-AppealModal spui-AppealModal--large" aria-describedby="styleonly-description" aria-labelledby="styleonly-title">
+  <div class="spui-AppealModal-frame">
+    <div class="spui-AppealModal-closeIconButton">
+      <button class="spui-IconButton spui-IconButton--large spui-IconButton--neutral" aria-label="閉じる"><svg width="1em" height="1em" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg" fill="currentColor" role="img" aria-hidden="true"><path d="M18.72 16.6c.59.59.59 1.54 0 2.12-.29.29-.68.44-1.06.44s-.77-.15-1.06-.44l-4.6-4.6-4.6 4.6c-.29.29-.68.44-1.06.44s-.77-.15-1.06-.44a1.49 1.49 0 0 1 0-2.12l4.6-4.6-4.6-4.6a1.49 1.49 0 0 1 0-2.12c.59-.58 1.54-.59 2.12 0l4.6 4.6 4.6-4.6a1.49 1.49 0 0 1 2.12 0c.58.59.59 1.54 0 2.12l-4.6 4.6 4.6 4.6z"></path></svg></button>
+    </div>
+    <div class="spui-AppealModal-image"><img width="640" height="336" src="https://images.microcms-assets.io/assets/24995dc41d5c40808fe4a9e3f6fb2b20/e2526e7bfa494168a2e547cfe55ac89f/top_mv.jpg?w=640&amp;h=336&amp;fit=crop&amp;fm=webp&amp;q=85" style="height: auto; width: 100%;"></div>
+    <p class="spui-AppealModal-title" id="styleonly-title">About Ameba</p>
+    <p class="spui-AppealModal-body" id="styleonly-description">AmebaはAmebaブログをはじめ、最新の芸能人ニュースやマンガ・占いなど生きたコンテンツが集結した月間7,500万人が利用する国民的メディアサービスです。</p>
+    <div class="spui-ButtonGroup spui-ButtonGroup--column spui-ButtonGroup--medium spui-AppealModal-buttonGroup">
+      <a class="spui-LinkButton spui-LinkButton--fullWidth spui-LinkButton--medium spui-LinkButton--contained" href="https://about.ameba.jp/">サイトを見る</a>
+    </div>
+    <div class="spui-AppealModal-closeTextButton"><button class="spui-SubtleButton spui-SubtleButton--large">閉じる</button></div>
+  </div>
+</div>
+  `}
+/>
+
 ## StyleOnly (Medium)
 
 <Preview withSource="open">
@@ -134,6 +184,45 @@ function AppealModalExample() {
     <StyleOnlyMedium />
   </Story>
 </Preview>
+
+<Source
+  code={`
+<AppealModal.StyleOnly
+  aria-describedby="styleonlymedium-description"
+  aria-labelledby="styleonlymedium-title"
+  size="medium"
+>
+  <AppealModal.Image>
+    <img
+      style={{ height: 'auto', width: '100%' }}
+      width="640"
+      height="336"
+      src="https://images.microcms-assets.io/assets/24995dc41d5c40808fe4a9e3f6fb2b20/e2526e7bfa494168a2e547cfe55ac89f/top_mv.jpg?w=640&h=336&fit=crop&fm=webp&q=85"
+    />
+  </AppealModal.Image>
+  <AppealModal.Title id="styleonlymedium-title">
+    About Ameba
+  </AppealModal.Title>
+  <AppealModal.Body id="styleonlymedium-description">
+    AmebaはAmebaブログをはじめ、最新の芸能人ニュースやマンガ・占いなど生きたコンテンツが集結した月間7,500万人が利用する国民的メディアサービスです。
+  </AppealModal.Body>
+  <AppealModal.ButtonGroup>
+    <LinkButton
+      href="https://about.ameba.jp/"
+      layout="fullWidth"
+      size="medium"
+    >
+      サイトを見る
+    </LinkButton>
+  </AppealModal.ButtonGroup>
+</AppealModal.StyleOnly>
+  `}
+/>
+
+<Source
+  code={`
+  `}
+/>
 
 ## StyleOnly (Small)
 
@@ -143,10 +232,88 @@ function AppealModalExample() {
   </Story>
 </Preview>
 
+<Source
+  code={`
+<AppealModal.StyleOnly
+  aria-describedby="styleonlysmall-description"
+  aria-labelledby="styleonlysmall-title"
+  size="small"
+>
+  <AppealModal.Image>
+    <img
+      style={{ height: 'auto', width: '100%' }}
+      width="640"
+      height="336"
+      src="https://images.microcms-assets.io/assets/24995dc41d5c40808fe4a9e3f6fb2b20/e2526e7bfa494168a2e547cfe55ac89f/top_mv.jpg?w=640&h=336&fit=crop&fm=webp&q=85"
+    />
+  </AppealModal.Image>
+  <AppealModal.Title id="styleonlysmall-title">
+    About Ameba
+  </AppealModal.Title>
+  <AppealModal.Body id="styleonlysmall-description">
+    AmebaはAmebaブログをはじめ、最新の芸能人ニュースやマンガ・占いなど生きたコンテンツが集結した月間7,500万人が利用する国民的メディアサービスです。
+  </AppealModal.Body>
+  <AppealModal.ButtonGroup>
+    <LinkButton
+      href="https://about.ameba.jp/"
+      layout="fullWidth"
+      size="medium"
+    >
+      サイトを見る
+    </LinkButton>
+  </AppealModal.ButtonGroup>
+</AppealModal.StyleOnly>
+  `}
+/>
+
 ## StyleOnly (Medium & Customized)
+
+AppealModalで定義されていない要素は利用時に追加してカスタマイズできます。
 
 <Preview withSource="open">
   <Story name="StyleOnly (Medium & Customized)">
     <StyleOnlyCustomized />
   </Story>
 </Preview>
+
+<Source
+  code={`
+<AppealModal.StyleOnly
+  aria-describedby="styleonlycustomized-description"
+  aria-labelledby="styleonlycustomized-title"
+  size="medium"
+>
+  <AppealModal.Image>
+    <img
+      style={{ height: 'auto', width: '100%' }}
+      width="640"
+      height="336"
+      src="https://images.microcms-assets.io/assets/24995dc41d5c40808fe4a9e3f6fb2b20/e2526e7bfa494168a2e547cfe55ac89f/top_mv.jpg?w=640&h=336&fit=crop&fm=webp&q=85"
+    />
+  </AppealModal.Image>
+  <AppealModal.Title id="styleonlycustomized-title">
+    About Ameba
+  </AppealModal.Title>
+  <AppealModal.Body id="styleonlycustomized-description">
+    AmebaはAmebaブログをはじめ、最新の芸能人ニュースやマンガ・占いなど生きたコンテンツが集結した月間7,500万人が利用する国民的メディアサービスです。
+  </AppealModal.Body>
+  <AppealModal.ButtonGroup>
+    <LinkButton
+      href="https://about.ameba.jp/"
+      layout="fullWidth"
+      size="medium"
+    >
+      サイトを見る
+    </LinkButton>
+    <p
+      style={{ alignItems: 'center', display: 'flex', margin: '24px 0 0' }}
+    >
+      <Checkbox id="nodisplay" />
+      <label htmlFor="nodisplay" style={{ marginLeft: '8px' }}>
+        次回から表示しない
+      </label>
+    </p>
+  </AppealModal.ButtonGroup>
+</AppealModal.StyleOnly>
+  `}
+/>
