feat(spindle-ui): update TextButton docs

--- a/packages/spindle-ui/src/TextButton/TextButton.stories.mdx
+++ b/packages/spindle-ui/src/TextButton/TextButton.stories.mdx
@@ -97,7 +97,7 @@ import { ChevronRightBold, CameraFill } from '../Icon';
 
 <Source
   code={`
-<TextButton icon={<ChevronRightBold aria-hidden="true" />} iconPosition="end">Text Button</TextButton>
+<TextButton variant="subtle" icon={<ChevronRightBold aria-hidden="true" />} iconPosition="end">Text Button</TextButton>
   `}
 />
 
