--- a/packages/spindle-ui/src/StackNotificationManager/StackNotificationManager.stories.mdx
+++ b/packages/spindle-ui/src/StackNotificationManager/StackNotificationManager.stories.mdx
@@ -97,6 +97,7 @@ render(<StackNotificationManagerProvider>
 
 - スタック機能はあくまで補足的な用途で使い、stack 自体がメインになるような使い方はしません。
 - 最大スタック数は PC では 4 つまでで、SP では 3 つまでです。これをこえる場合は古い要素が自動で消えます。
+- 基本的にモーダルのように要素をグローバルに持たせる必要はありません。
 - このコンポーネントでは関与しませんが、ライブリージョンをアプリケーションで実装してください（参考：[実装方法 - 4.1.3 コンテンツの変更をユーザーに知らせる - Ameba Accessibility Guidelines](https://a11y-guidelines.ameba.design/4/1/3/#%E5%AE%9F%E8%A3%85%E6%96%B9%E6%B3%95)）
 - ライブリージョンは次のように実装します。 `html` 側に `aria-live="polite"` 及び `role="status"` を持つ要素を予め埋め込んでおき、この要素にコンテンツを動的に挿入することで、スクリーンリーダーが自動でコンテンツを読み上げてくれます。
   - `aria-live`を指定した要素に複数の要素を追加すると重複して読み上げられてしまうので、最新の通知で上書きします。
